<resources>
    <string name="app_name">Furqan</string>
    <string name="suralar">Chapters</string>
    <string name="cont">Continue</string>
    <string name="favorites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="arabic">Arabic</string>
    <string name="uzbek">Uzbek</string>
    <string name="more_coming">More translations coming soon</string>
    <string name="audiopos_stored">Audio position stored</string>
    <string name="audiopos_restored">continue playing</string>
    <string name="audio_load_fail">Failed to load! Check your network</string>
    <string name="save">Save</string>
    <string name="shareayah">Share this and get coins</string>
    <string name="bookmark_it">Bookmark the aayah</string>
    <string name="favourite_it">Add to Favourites</string>
    <string name="banner_ad" translatable="false">ca-app-pub-3838820812386239/6533462802</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="app_shuts_down_now">If the app does not shut down in 3 seconds, please, make sure to clear all its data to refresh and start using the new database</string>
    <string name="surah">"Surah: "</string>
    <string name="ayah">", aayah: "</string>
    <string name="language_selected">Language Selected</string>
    <string name="no_bookmarks">No bookmarks found</string>
    <string name="invite_i">Invite</string>
    <string name="search_hint">prayer</string>
    <string name="search">Search</string>
    <string name="found">Found:</string>
    <string name="tryagain">Try again</string>
    <string name="title_activity_scrolling">Introduction</string>
    <string name="action_settings">Settings</string>
    <string name="desc_ayah_of_the_day">Every time a new verse is displayed randomly</string>
    <string name="desc_comments">Commentaries are colored so you can ignore them</string>
    <string name="desc_audio_seperate">Each chapter has separate downloadable audio</string>
    <string name="title_color_comments">Colored commentaries</string>
    <string name="title_daily_ayah">Random verse</string>
    <string name="title_separate_audio">Audio</string>
    <string name="rate">Rate Us</string>
    <string name="error_message">Error occurred. Please, restart the app</string>
    <string name="furqan_definition">Al-Furqān (Arabic: الفرقان‎, \"The Criterion\") is the 25th chapter (sūrah) of the Qur\'an with 77 verses (āyāt). The name Al-Furqan or \"The Criterion\" refers to the Qur\'an itself as the decisive factor between good and evil.</string>
    <string name="show_a_randomly_selected_ayah_on_launch">Show a randomly selected ayah on launch</string>
    <string name="app_logo_description">Application icon, Al Quran Al Kareem</string>
    <string name="settings_saved">Setting are saved</string>
    <string name="play">play</string>
    <string name="audio_playing">Chapter Audio Player</string>
    <string name="fast_rewind">Fast Rewind</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="audio_downloaded">Audio downloaded</string>
    <string name="audio_player_description">Notification style audio player</string>
    <string name="audio_downloaded_ready">audio is downloaded and available for playback</string>
    <string name="addmob_app_id" translatable="false">ca-app-pub-3838820812386239~2342916878</string>
    <string name="download_surah">download the audio file</string>
    <string name="surahAudioUnlockAd" translatable="false">ca-app-pub-3838820812386239/1790049383</string>
    <string name="unlock_the_download">Unlock the download button by watching a video</string>
    <string name="surah_audio_available">Chapter audio is available</string>
    <string name="reload">Load</string>
    <string name="quranic_order">Quranic order</string>
    <string name="revelation_order">Revelation order</string>
    <string name="order_description_revelation">order according to the order of revelation</string>
    <string name="order_description_mushaf">order according to the order in the Mushaf</string>
    <string name="enter_a_word">enter a word</string>
    <string name="interstitial_fullpage" translatable="false">ca-app-pub-3838820812386239/2551267023</string>
    <string name="bookmark_found">Bookmark found</string>
    <string name="chapters_not_available">Database empty. Please load some chapters first.</string>
    <string name="previous_ayah">previous aayah</string>
    <string name="next_ayah">next aayah</string>
    <string name="failed_to_load_ayah">Failed to load aayah. Try again</string>
    <string name="failure_generic">An error has occurred, try again later</string>
    <string name="downloadaudio_title">Download Audio</string>
    <string name="messages_button_text">Messages</string>
    <string name="notification_from_author_channel" translatable="false">Muallifdan</string>
    <string name="audio_player_title">Furqon Player</string>
    <string name="surah_size_issue">Chapter text was downloaded with errors. Trying to fix</string>
    <string name="youtube_btn_title">Stay Tuned</string>
    <string name="please_watch_video">Before you can listen to the audio file, you need to download it first</string>
    <string name="audio_download">How to download the audio files</string>
    <string name="earn_coins">Earn Coins</string>
    <string name="extra_title">Extra</string>
    <string name="watch_ads">Watch Ads</string>
    <string name="share">Share</string>
    <string name="quran_kareem_title">Furqan - Quran Kareem for Android. Amazing app!</string>
    <string name="invitation_confirm">Invitation link confirmed!</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="down_or_play"><![CDATA[<-Download | Play online->]]></string>
    <string name="unlock_or_play"><![CDATA[<-Unlock | Play online->]]></string>
    <string name="play_local"><![CDATA[Play local audio->]]></string>
    <string name="downloading">downloading...</string>
    <string name="ok">Unlock</string>
    <string name="cancel">Cancel</string>
    <string name="use_coins">Use Coins</string>
    <string name="coins">Coins</string>
    <string name="not_enough_coins">You don`t have enough coins</string>
    <string name="available_coins">Available Coins</string>
    <string name="required_coins">Required</string>
    <string name="u_received">"You have received "</string>
    <string name="_coins">" coins"</string>
    <string name="download_audio_description">There are many ways to earn coins: <br />using daily, <br />sharing to fiends <br />or watching rewarded ads</string>
    <string name="free_coin_awards">Use actively and get coins</string>
    <string name="best_user_awards">Best User Awards</string>
    <string name="chat_btn_title">Communication</string>
    <string name="welcome_title">Welcome</string>
    <string name="free_coin_awards_received">Thank you for your effort. You have received free coins!</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="ad_loaded_toast">Ad is ready</string>
    <string name="you_need">"You need "</string>
    <string name="uz_kam"></string>
    <string name="favourites_button_description">add to favourites</string>
    <string name="audio">Audio</string>
    <string name="your_message_to_the_author">Your message to the author</string>
    <string name="send">Send</string>
    <string name="about_text">" Dear user.   \n\n My name is Ahmad and I am the author and programmer of this app.  \n\n  Thank you so much for choosing “Furqan” among the apps. Your regular use of \"Furqan\" means a lot to me. May Allah be pleased with us all!   \n\n First of all, I would like to mention that the purpose of creating this application is to present the resources available in your native language, in a way that is easy to access and learn. At the same time to ensure continuity, order and integrity of data. The application is also designed to be versatile and meet different requirements. Sure enough, this is achieved by solving complex problems and requires valuable resources. But inshaAllah, I will achieve every goal I have set in front of me. \n\n   It should also be noted that the revenue from the advertising in the application at least to some extent provides for keeping the resources alive and development purposes. Although the ads are mostly designed to appear only in places where you have to wait a little longer, hoping you do not see those few seconds as wasted. My request to users to refrain from clicking the ads, unless you are genuinely interested.  \n\n  Report a bug in the app: bztronik@gmail.com \n\n   Sincerely, Ahmad "</string>
    <string name="about">About</string>
    <string name="thankyou">Thank you</string>
    <string name="text_loading">Content is loading. \n Watch the ad, while we take care of the rest</string>
    <string name="want_to_delete">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="basmala" translatable="false">بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ</string>
    <string name="choose_font">Choose Quran font</string>
    <string name="filenotfound">File not found</string>
    <string name="tracklist_empty_warning">Download some audio first!</string>
    <string name="visit_for_coins">You can also earn coins by visiting the app everyday</string>
    <string name="points_restored">"Points restored "</string>
    <string name="signin_request">Signin to get special rewards</string>
    <string name="noads_button_label">No ads for today</string>
    <string name="sign_in">Sign In</string>
    <string name="memorizer">Memorize Quran</string>
    <string name="committolearn">Commit To Learn</string>
    <string name="decrease_repeat_count">decrease repeat count</string>
    <string name="increase_repeat_count">increase repeat count</string>
    <string name="decrease_the_value">decrease the value</string>
    <string name="increase_the_value">increase the value</string>
    <string name="write_permission_denied">Error! Write permission required</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="refresh">Refresh the values</string>
</resources>
