<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/favourites_i"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorites"
        app:showAsAction="ifRoom"
        tools:Context=".ToolbarMenu"/>
    <item
        android:id="@+id/settings_i"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        tools:Context=".ToolbarMenu"/>

    <item
        android:id="@+id/invite_i"
        android:icon="@drawable/ic_group_add_black_24dp"
        android:title="@string/invite_i"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/messages_i"
        android:icon="@drawable/ic_add_alert__24dp"
        android:title="@string/messages_button_text"
        app:showAsAction="ifRoom" />
</menu>