<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_bookmark_button"
        android:enabled="true"
        android:icon="@drawable/ic_turned_in_black_24dp"
        android:title="@string/bookmark_found"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings_icon"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/play"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_play_circle"
        android:title="@string/play"
        app:showAsAction="always" />

</menu>