<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/signin_item"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/signin_request"
        app:showAsAction="ifRoom"
        tools:Context=".ToolbarMenu"/>
    <item
        android:id="@+id/noads_item"
        android:icon="@drawable/ic_baseline_card_giftcard_24"
        android:title="@string/noads_button_label"
        app:showAsAction="ifRoom"
        tools:Context=".ToolbarMenu"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"
        tools:Context=".ToolbarMenu"/>
</menu>
